<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:paddingTop="3dp"
        android:textColor="@color/statusBar"
        android:textAlignment="center"
        android:orientation="vertical"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/propayTerminal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/buttons"
                android:text="@string/propay_button"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/ppsTermianl"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/secondary"
                android:textColor="@color/white"
                android:text="@string/pps_button"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/worldnetLogin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/buttons"
                android:text="@string/worldnet_button"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>